# beir-qdrant

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  pyproject.toml  sitemap.xml
examples/retrieval/search/: evaluate_all.py  evaluate_all_exact.py  evaluate_reranking.py
examples/retrieval/search/dense/: evaluate_dense.py
examples/retrieval/search/hybrid/: evaluate_rrf.py
examples/retrieval/search/sparse/: evaluate_bm42.py  evaluate_sparse.py
search/: search_index.json
src/beir_qdrant/retrieval/model_adapter/: base.py  colbert.py  fastembed.py  sentence_transformers.py
src/beir_qdrant/retrieval/models/: base.py  colbert.py  fastembed.py  sentence_transformers.py
src/beir_qdrant/retrieval/search/: qdrant.py
src/beir_qdrant/retrieval/search/dense/: __init__.py  dense_search.py
src/beir_qdrant/retrieval/search/hybrid/: __init__.py  hybrid_search.py  rrf_search.py
src/beir_qdrant/retrieval/search/late_interaction/: __init__.py  late_interaction_search.py
src/beir_qdrant/retrieval/search/multi_vector/: __init__.py  late_interaction_search.py  multi_vector_reranking.py  multi_vector_search.py
src/beir_qdrant/retrieval/search/sparse/: __init__.py  bm42_search.py  sparse_search.py
tests/beir_qdrant/retrieval/model_adapter/: test_colbert.py  test_fastembed.py  test_sentence_transformers.py
tests/beir_qdrant/retrieval/models/: test_colbert.py  test_fastembed.py  test_sentence_transformers.py
tests/beir_qdrant/retrieval/search/: test_qdrant.py
