[tool.poetry]
name = "beir-qdrant"
version = "0.4.6"
description = "Qdrant integration with BEIR, simplifying quality checks on standard datasets"
authors = ["Kacper Łukawski <kacper.lukawski@qdrant.com>"]
readme = "README.md"
repository = "https://github.com/kacperlukawski/beir-qdrant"
license = "Apache 2.0"
packages = [
    { include = "beir_qdrant", from = "src" },
]

[tool.poetry.dependencies]
python = "<3.13,>=3.9.0"
beir = "^2.0.0"
fastembed = "^0.3.1"
qdrant-client = "^1.10.0"
transformers = "^4.43.3"
colbert-ai = "^0.2.20"
fastembed-gpu = "^0.3.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.10"
pre-commit = "^3.7.1"

[tool.pytest.ini_options]
minversion = "7.1"
pythonpath = [
    "src/"
]
testpaths = [
    "tests/"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
